--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
 #uplimg2 {
     border: 4px solid;
+    width: 15em;
 }
 
 #uplimg3 {
@@ -15,9 +16,19 @@
 }
 
 div {
-    padding: 2em;
+    padding: 10px;
 }
 
 p {
-    font-size: .5em;
+    font-size: 1em;
+}
+
+#loading {
+    display: none;
+    position: fixed;   
+}
+
+img {
+  display: flex;
+  justify-content: center;
 }
